tdf#168929 fix cannot rename objects with CJK languages via Navigator

Change-Id: I11fa5106d63b78a4aacb144ed70ac658607611a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192704
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>